k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: email-validator-service
spec:
  type: NodePort
  selector:
    app: email-validator
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
    nodePort: 30007
