k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: email-validator-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: email-validator.info
    http:
      paths:
      - path: /validate
        pathType: Prefix
        backend:
          service:
            name: email-validator-service
            port:
              number: 80
